--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
             <h1 class="title is-1 publication-title">Turning Internal Gap into Self-Improvement: Promoting the Generation-Understanding Unification in MLLMs</h1>
-            <div class="is-size-5 publication-authors">
+            <!-- <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
@@ -251,14 +251,58 @@
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
                   </span>
+                  </div> -->
+                  <div class="is-size-5 publication-authors">
+                    <span class="author-block">
+                      <a href="https://yujinhanml.github.io" target="_blank">Yujin Han</a><sup>1,8,*</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="SECOND AUTHOR LINK" target="_blank">Hao Chen</a><sup>2,*</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="THIRD AUTHOR LINK" target="_blank">Andi Han</a><sup>3,4</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="FOURTH AUTHOR LINK" target="_blank">Zhiheng Wang</a><sup>5,6</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="FIFTH AUTHOR LINK" target="_blank">Xinyu Liu</a><sup>7</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="SIXTH AUTHOR LINK" target="_blank">Yingya Zhang</a><sup>8</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="SEVENTH AUTHOR LINK" target="_blank">Shiwei Zhang</a><sup>8,†</sup>,
+                    </span>
+                    <span class="author-block">
+                      <a href="EIGHTH AUTHOR LINK" target="_blank">Difan Zou</a><sup>1,†</sup>
+                    </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
+                    <span class="author-block">
+                      1 The University of Hong Kong,&nbsp;
+                      2 Carnegie Mellon University,&nbsp;
+                      3 University of Sydney,&nbsp;
+                      4 RIKEN AIP,&nbsp;
+                      5 Shanghai Artificial Intelligence Laboratory,&nbsp;
+                      6 Shanghai Jiao Tong University,&nbsp;
+                      7 Hong Kong University of Science and Technology,&nbsp;
+                      8 Alibaba Group
+                    </span>
+                    <span class="eql-cntrb">
+                      <small><br><sup>*</sup> Equal Contribution &nbsp;&nbsp; <sup>†</sup> Corresponding Authors</small>
+                    </span>
+                  </div>
+
+
+
+                  <!-- <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
                     <span class="author-block">Institution Name<br>Conference name and year</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
+                  </div> -->
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
