--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
             <h1 class="title is-1 publication-title">Turning Internal Gap into Self-Improvement: Promoting the Generation-Understanding Unification in MLLMs</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://yujinhanml.github.io" target="_blank">Yujin Han</a><sup>1,8,*</sup>,
+                <a href="https://yujinhanml.github.io" target="_blank">Yujin Han</a><sup>1,8</sup>,
               </span>
               <span class="author-block">
-                <a href="SECOND AUTHOR LINK" target="_blank">Hao Chen</a><sup>2,*</sup>,
+                <a href="SECOND AUTHOR LINK" target="_blank">Hao Chen</a><sup>2</sup>,
               </span>
               <span class="author-block">
                 <a href="THIRD AUTHOR LINK" target="_blank">Andi Han</a><sup>3,4</sup>,
@@ -233,7 +233,7 @@
                       8 Alibaba Group
                     </span>
                     <span class="eql-cntrb">
-                      <small><br><sup>*</sup> Equal Contribution &nbsp;&nbsp; <sup>†</sup> Corresponding Authors</small>
+                      <small><br><sup>†</sup> Corresponding Authors</small>
                     </span>
                   </div>
 
