--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                          <!-- TODO: Update with your arXiv paper ID -->
                 <!-- TODO: Update with your arXiv paper ID -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2507.16663" target="_blank"
+                  <a href="https://arxiv.org/abs/2507.16663" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
