--- a/index.html
+++ b/index.html
@@ -199,25 +199,25 @@
                 <a href="https://yujinhanml.github.io" target="_blank">Yujin Han</a><sup>1,8</sup>,
               </span>
               <span class="author-block">
-                <a href="SECOND AUTHOR LINK" target="_blank">Hao Chen</a><sup>2</sup>,
+                <a href="https://hhhhhhao.github.io/" target="_blank">Hao Chen</a><sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="THIRD AUTHOR LINK" target="_blank">Andi Han</a><sup>3,4</sup>,
+                <a href="https://andihan3.github.io/" target="_blank">Andi Han</a><sup>3,4</sup>,
               </span>
               <span class="author-block">
-                <a href="FOURTH AUTHOR LINK" target="_blank">Zhiheng Wang</a><sup>5,6</sup>,
+                <a href="https://w-zhih.github.io/" target="_blank">Zhiheng Wang</a><sup>5,6</sup>,
               </span>
               <span class="author-block">
-                <a href="FIFTH AUTHOR LINK" target="_blank">Xinyu Liu</a><sup>7</sup>,
+                <a href="https://liuxinyv.github.io/" target="_blank">Xinyu Liu</a><sup>7</sup>,
               </span>
               <span class="author-block">
-                <a href="SIXTH AUTHOR LINK" target="_blank">Yingya Zhang</a><sup>8</sup>,
+                <a href="https://openreview.net/profile?id=~Yingya_Zhang3" target="_blank">Yingya Zhang</a><sup>8</sup>,
               </span>
               <span class="author-block">
-                <a href="SEVENTH AUTHOR LINK" target="_blank">Shiwei Zhang</a><sup>8,†</sup>,
+                <a href="https://openreview.net/profile?id=~Shiwei_Zhang2" target="_blank">Shiwei Zhang</a><sup>8,†</sup>,
               </span>
               <span class="author-block">
-                <a href="EIGHTH AUTHOR LINK" target="_blank">Difan Zou</a><sup>1,†</sup>
+                <a href="https://difanzou.github.io/" target="_blank">Difan Zou</a><sup>1,†</sup>
               </span>
             </div>
 
