--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      1 The University of Hong Kong,&nbsp;
-                      2 Carnegie Mellon University,&nbsp;
-                      3 University of Sydney,&nbsp;
-                      4 RIKEN AIP,&nbsp;
-                      5 Shanghai Artificial Intelligence Laboratory,&nbsp;
-                      6 Shanghai Jiao Tong University,&nbsp;
-                      7 Hong Kong University of Science and Technology,&nbsp;
-                      8 Alibaba Group
+                      1.The University of Hong Kong,&nbsp;
+                      2.Carnegie Mellon University,&nbsp;
+                      3.University of Sydney,&nbsp;
+                      4.RIKEN AIP,&nbsp;
+                      5.Shanghai Artificial Intelligence Laboratory,&nbsp;
+                      6.Shanghai Jiao Tong University,&nbsp;
+                      7.Hong Kong University of Science and Technology,&nbsp;
+                      8.Alibaba Group
                     </span>
                     <span class="eql-cntrb">
                       <small><br><sup>†</sup> Corresponding Authors</small>
