--- a/index.html
+++ b/index.html
@@ -290,6 +290,20 @@
 <!-- End paper abstract -->
 
 
+<!-- Teaser Image-->
+<section class="hero teaser">
+    <div class="container is-max-desktop">
+        <div class="hero-body">
+            <img src="static/images/self-contradictory.png" alt="An overview of our method"/>
+            <h2 class="subtitle has-text-centered">
+                We propose a method for searching models in large model repositories, using solely the weights. Our method can embed each logit of classifier model separately and match that
+                representation with a text prompt. Thus, we can search for models that can recognize a target concept, such as "Dog".
+            </h2>
+        </div>
+    </div>
+</section>
+<!-- End teaser Image -->
+    
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
