--- a/index.html
+++ b/index.html
@@ -274,10 +274,9 @@
 <section class="hero teaser">
     <div class="container is-max-desktop">
         <div class="hero-body">
-            <img src="static/images/self-contradictory.png" alt="An overview of our method"/>
+            <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
             <h2 class="subtitle has-text-centered">
-                We propose a method for searching models in large model repositories, using solely the weights. Our method can embed each logit of classifier model separately and match that
-                representation with a text prompt. Thus, we can search for models that can recognize a target concept, such as "Dog".
+                Illustration of MLLMs' internal gap. We examine a challenging case involving implicit physical principles using ChatGPT o3 and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
             </h2>
         </div>
     </div>
