--- a/index.html
+++ b/index.html
@@ -301,6 +301,30 @@
 </section>
 <!-- End paper abstract -->
 
+
+<!-- Teaser Image -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Internal Gap Illustration</h2>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <figure>
+            <img src="static/images/self-contradictory.png"
+                 alt="MLLMs' internal gap"
+                 style="max-width:100%;height:auto;">
+            <figcaption class="subtitle" style="margin-top:.75rem;">
+              Illustration of MLLMs' internal gap. We examine a challenging case involving implicit physical principles using ChatGPT o3 and find: images produced by the generation branch are identified as incorrect by the understanding branch, showing non-unification.
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Teaser Image -->
+
+
     
 <!-- Image carousel -->
 <section class="hero is-small">
