--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Internal Gap Illustration</h2>
+      <h2 class="title is-3">Non-unification Phenomenon is Pervasive in Unified MLLMs</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <figure>
-            <img src="static/images/self-contradictory.png"
+            <img src="static/images/nonunification_single.png"
                  alt="MLLMs' internal gap"
                  style="max-width:100%;height:auto;">
             <figcaption class="subtitle" style="margin-top:.75rem;">
-              Illustration of MLLMs' internal gap. We examine a challenging case involving implicit physical principles using ChatGPT o3 and find: images produced by the generation branch are identified as incorrect by the understanding branch, showing non-unification.
+              Verification of internal gaps. (a) and (b) identify task difficulty as a confounder in measuring non-unification score (\textit{Non.}): easy tasks may underestimate the gap, while hard tasks risk overestimation. Stratifying by task difficulty (Easy–Medium–Hard) yields a more reliable estimation. (c) Evaluation of six MLLMs across  three difficulty levels shows unified MLLMs remain non-unified, with non-unification scores approaching 60%. 
             </figcaption>
           </figure>
         </div>
