--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                  alt="MLLMs' internal gap"
                  style="max-width:100%;height:auto;">
             <figcaption class="subtitle" style="margin-top:.75rem;">
-              Verification of internal gaps. (a) and (b) identify task difficulty as a confounder in measuring non-unification score (\textit{Non.}): easy tasks may underestimate the gap, while hard tasks risk overestimation. Stratifying by task difficulty (Easy–Medium–Hard) yields a more reliable estimation. (c) Evaluation of six MLLMs across  three difficulty levels shows unified MLLMs remain non-unified, with non-unification scores approaching 60%. 
+              Verification of internal gaps. (a) and (b) identify task difficulty as a confounder in measuring non-unification score (Non.): easy tasks may underestimate the gap, while hard tasks risk overestimation. Stratifying by task difficulty (Easy–Medium–Hard) yields a more reliable estimation. (c) Evaluation of six MLLMs across  three difficulty levels shows unified MLLMs remain non-unified, with non-unification scores approaching 60%. 
             </figcaption>
           </figure>
         </div>
