--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 
 <!-- Teaser Image -->
-<section class="hero is-small is-light">
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Non-unification Phenomenon is Pervasive in Unified MLLMs</h2>
