--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
 <!-- Image carousel (title changes with slide) -->
 <section class="hero is-small">
   <div class="hero-body">
-    <!-- 标题：给它一个 id 以便脚本更新 -->
-    <h2 id="carousel-title" class="title is-3">
+    <!-- 动态标题：给它一个唯一 id -->
+    <h2 id="carousel-title-1" class="title is-3">
       Non-unification Phenomenon is Pervasive in Unified MLLMs
     </h2>
 
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+      <div id="results-carousel-1" class="carousel results-carousel">
         
         <!-- Slide 1 -->
         <div class="item" data-title="Non-unification Phenomenon is Pervasive in Unified MLLMs">
@@ -331,11 +331,12 @@
           </h2>
         </div>
 
-      </div> <!-- end results-carousel -->
+      </div> <!-- end results-carousel-1 -->
     </div>   <!-- end container -->
   </div>     <!-- end hero-body -->
 </section>
 <!-- End image carousel -->
+
 
 
     
