--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         
         <!-- Slide 2：切到这一页时，标题会自动换成下方 data-title 的内容 -->
         <div class="item" data-title="Internal gap mainly stems from weak generation instead of misunderstanding">
-          <img src="static/images/carousel2.jpg" 
+          <img src="static/images/nonunification_single.png" 
                alt="Weak generation explanation" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
             Internal gap mainly stems from weak generation instead of misunderstanding.
@@ -336,48 +336,6 @@
   </div>     <!-- end hero-body -->
 </section>
 
-
-
-    
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- TODO: Replace with your research result images -->
-        <img src="static/images/carousel1.jpg" alt="First research result visualization" loading="lazy"/>
-        <!-- TODO: Replace with description of this result -->
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="Second research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="Third research result visualization" loading="lazy"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="Fourth research result visualization" loading="lazy"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
 
 
 
