--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div class="hero-body">
             <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
             <h2 class="subtitle has-text-centered">
-                Illustration of MLLMs' internal gap. We examine a challenging case involving implicit physical principles using ChatGPT o3 and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
+                Illustration of MLLMs' internal gap. We examine challenging cases involving implicit physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
             </h2>
         </div>
     </div>
