--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   <div class="hero-body">
     <!-- 标题：给它一个 id，供脚本更新 -->
     <h2 id="carousel-title-1" class="title is-3">
-      Non-unification Phenomenon is Pervasive in Unified MLLMs
+      Non-unification is pervasive in unified MLLMs where understanding typically outperforms generation
     </h2>
 
     <div class="container">
@@ -358,10 +358,10 @@
         
         <!-- Slide 2：切到这一页时，标题会自动换成下方 data-title 的内容 -->
         <div class="item" data-title="Internal gap mainly stems from weak generation instead of misunderstanding">
-          <img src="static/images/nonunification_single.png" 
+          <img src="static/images/reason.png" 
                alt="Weak generation explanation" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            Internal gap mainly stems from weak generation instead of misunderstanding.
+            Internal gap mainly stems from weak generation instead of misunderstanding. Weak-generation (Qwen/Human-checked) above 50\% (even 100\%) indicate internal gap mainly stems from weak generation.
           </h2>
         </div>
 
