--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div id="results-carousel-1" class="carousel results-carousel">
         
         <!-- Slide 1：在 data-title 中放标题文本 -->
-        <div class="item" data-title="Non-unification Phenomenon is Pervasive in Unified MLLMs">
+        <div class="item" data-title="Non-unification is pervasive in unified MLLMs where understanding typically outperforms generation">
           <img src="static/images/nonunification_single.png" 
                alt="Verification of internal gaps" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
