--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <img src="static/images/nonunification_single.png" 
                alt="Verification of internal gaps" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            Verification of internal gaps. (a) and (b) identify task difficulty as a confounder in measuring non-unification score (Non.): easy tasks may underestimate the gap, while hard tasks risk overestimation. Stratifying by task difficulty (Easy–Medium–Hard) yields a more reliable estimation. (c) Evaluation of six MLLMs across three difficulty levels shows unified MLLMs remain non-unified, with non-unification scores approaching 60%.
+            <span class="has-text-weight-bold">Verification of internal gaps.</span> (a) and (b) identify task difficulty as a confounder in measuring non-unification score (Non.): easy tasks may underestimate the gap, while hard tasks risk overestimation. Stratifying by task difficulty (Easy–Medium–Hard) yields a more reliable estimation. (c) Evaluation of six MLLMs across three difficulty levels shows unified MLLMs remain non-unified, with non-unification scores approaching 60%.
           </h2>
         </div>
         
@@ -361,7 +361,7 @@
           <img src="static/images/reason.png" 
                alt="Weak generation explanation" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            Internal gap mainly stems from weak generation instead of misunderstanding. Weak-generation (Qwen/Human-checked) above 50\% (even 100\%) indicate internal gap mainly stems from weak generation.
+            <span class="has-text-weight-bold">Internal gap mainly stems from weak generation instead of misunderstanding.</span> Weak-generation (Qwen/Human-checked) above 50\% (even 100\%) indicate internal gap mainly stems from weak generation.
           </h2>
         </div>
 
