--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <img src="static/images/reason.png" 
                alt="Weak generation explanation" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
-            <span class="has-text-weight-bold">Internal gap mainly stems from weak generation instead of misunderstanding.</span> Weak-generation (Qwen/Human-checked) above 50\% (even 100\%) indicate internal gap mainly stems from weak generation.
+            <span class="has-text-weight-bold">Internal gap mainly stems from weak generation instead of misunderstanding.</span> Weak-generation (Qwen/Human-checked) above 50% (even 100%) indicate internal gap mainly stems from weak generation.
           </h2>
         </div>
 
