--- a/index.html
+++ b/index.html
@@ -378,13 +378,9 @@
 <section class="hero teaser">
   <div class="container is-light">
     <div class="hero-body" style="position: relative;">
-      
-      <h3 class="title is-5"
-          style="position: absolute; top: 10px; left: 10px; 
-                 background: rgba(255,255,255,0.8); 
-                 padding: 4px 8px; border-radius: 4px;">
-        internal gap-based self-improvement
-      </h3>
+    <h2 id="carousel-title-1" class="title is-3">
+      Internal Gap-based Self-Improvement
+    </h2>
 
       <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
       
