--- a/index.html
+++ b/index.html
@@ -378,12 +378,20 @@
 <section class="hero teaser">
   <div class="container is-light">
     <div class="hero-body" style="position: relative;">
-    <h2 id="carousel-title-1" class="title is-3">
-      Internal Gap-based Self-Improvement
-    </h2>
 
+      <!-- 左上角标题，灰色背景 -->
+      <h2 class="title is-3"
+          style="position: absolute; top: 10px; left: 10px;
+                 background: rgba(128,128,128,0.85); /* 灰色半透明 */
+                 color: white; /* 字体颜色 */
+                 padding: 6px 12px;
+                 border-radius: 4px;">
+        Internal Gap-based Self-Improvement
+      </h2>
+
+      <!-- 图片 -->
       <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
-      
+
       <h2 class="subtitle has-text-centered">
         Illustration of MLLMs' internal gap. We examine challenging cases involving implicit physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
       </h2>
@@ -391,6 +399,7 @@
   </div>
 </section>
 <!-- End teaser Image -->
+
 
 
 
