--- a/index.html
+++ b/index.html
@@ -372,37 +372,28 @@
 
 
 
+<!-- Teaser Image -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
 
+        <!-- 左上角标题（可选） -->
+        <h2 class="title is-3">Internal Gap-based Self-Improvement</h2>
 
-<!-- Teaser Image-->
-<section class="hero teaser">
-  <div class="container is-light">
-    <div class="hero-body" style="position: relative;">
+        <!-- 图片 -->
+        <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
 
-      <!-- 左上角标题，灰色背景 -->
-      <h2 class="title is-3"
-          style="position: absolute; top: 10px; left: 10px;
-                 background: rgba(128,128,128,0.85); /* 灰色半透明 */
-                 color: white; /* 字体颜色 */
-                 padding: 6px 12px;
-                 border-radius: 4px;">
-        Internal Gap-based Self-Improvement
-      </h2>
+        <!-- 说明文字 -->
+        <h2 class="subtitle has-text-centered">
+          Illustration of MLLMs' internal gap. We examine challenging cases involving implicit physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
+        </h2>
 
-      <!-- 图片 -->
-      <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
-
-      <h2 class="subtitle has-text-centered">
-        Illustration of MLLMs' internal gap. We examine challenging cases involving implicit physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
-      </h2>
+      </div>
     </div>
   </div>
 </section>
-<!-- End teaser Image -->
-
-
-
-
+<!-- End Teaser Image -->
 
 
 
