--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
           <span class="copy-text">Copy</span>
         </button>
       </div>
-      <pre id="bibtex-code"><code>@article{YourPaperKey2024,
+      <pre id="bibtex-code"><code>@article{han2025turninginternalgapselfimprovement,
   title={Turning Internal Gap into Self-Improvement: Promoting the Generation-Understanding Unification in MLLMs},
   author={Yujin Han and Hao Chen and Andi Han and Zhiheng Wang and Xinyu Liu and Yingya Zhang and Shiwei Zhang and Difan Zou},
   year={2025},
