--- a/index.html
+++ b/index.html
@@ -317,6 +317,18 @@
 </section>
 <!-- End teaser Image -->
 
+<article class="message is-info">
+  <div class="message-header">
+    <p>Key Insight</p>
+  </div>
+  <div class="message-body has-text-justified">
+    Unified MLLMs exhibit an internal gap: understanding typically outperforms generation. 
+    We show this gap mainly stems from weak generation rather than misunderstanding, 
+    which motivates an internal gap-based self-improvement strategy.
+  </div>
+</article>
+
+
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
