--- a/index.html
+++ b/index.html
@@ -317,16 +317,23 @@
 </section>
 <!-- End teaser Image -->
 
-<article class="message is-info">
-  <div class="message-header">
-    <p>Key Insight</p>
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column is-four-fifths">
+      <article class="message is-info">
+        <div class="message-header">
+          <p>Key Insight</p>
+        </div>
+        <div class="message-body has-text-justified">
+          Unified MLLMs exhibit an internal gap: understanding typically outperforms generation. 
+          We show this gap mainly stems from weak generation rather than misunderstanding, 
+          which motivates an internal gap-based self-improvement strategy.
+        </div>
+      </article>
+    </div>
   </div>
-  <div class="message-body has-text-justified">
-    Unified MLLMs exhibit an internal gap: understanding typically outperforms generation. 
-    We show this gap mainly stems from weak generation rather than misunderstanding, 
-    which motivates an internal gap-based self-improvement strategy.
-  </div>
-</article>
+</div>
+
 
 
 <!-- Paper abstract -->
