--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
   <div class="hero-body">
     <!-- 标题：给它一个 id，供脚本更新 -->
     <h2 id="carousel-title-1" class="title is-3">
-      Phenomenon: Non-unification is pervasive in unified MLLMs where understanding typically outperforms generation
+      Phenomenon: Unified MLLMs remain non-unified with understanding outperforms generation
     </h2>
 
     <div class="container">
       <div id="results-carousel-1" class="carousel results-carousel">
         
         <!-- Slide 1：在 data-title 中放标题文本 -->
-        <div class="item" data-title="Phenomenon: Non-unification is pervasive in unified MLLMs where understanding typically outperforms generation">
+        <div class="item" data-title="Phenomenon: Unified MLLMs remain non-unified with understanding outperforms generation">
           <img src="static/images/nonunification_single.png" 
                alt="Verification of internal gaps" loading="lazy"/>
           <h2 class="subtitle has-text-centered">
