--- a/index.html
+++ b/index.html
@@ -318,19 +318,22 @@
 <!-- End teaser Image -->
 
 <section class="hero teaser">
-<div class="container is-max-desktop">
-  <article class="message is-info">
-    <div class="message-header">
-      <p>Key Insight</p>
-    </div>
-    <div class="message-body has-text-justified">
-      Unified MLLMs exhibit an internal gap: understanding typically outperforms generation. 
-      We show this gap mainly stems from weak generation rather than misunderstanding, 
-      which motivates an internal gap-based self-improvement strategy.
-    </div>
-  </article>
-</div>
+  <div class="container is-max-desktop">
+    <article class="message is-info">
+      <div class="message-header">
+        <!-- 放大标题 -->
+        <p class="title is-4">Key Insight</p>
+      </div>
+      <div class="message-body has-text-justified">
+        <ul>
+          <li>Unified MLLMs exhibit an internal gap: understanding typically outperforms generation.</li>
+          <li>The gap mainly stems from weak generation rather than misunderstanding, motivating an internal gap-based self-improvement strategy.</li>
+        </ul>
+      </div>
+    </article>
+  </div>
 </section>
+
 
 
 
