--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      1.The University of Hong Kong,&nbsp;
-                      2.Carnegie Mellon University,&nbsp;
-                      3.University of Sydney,&nbsp;
-                      4.RIKEN AIP,&nbsp;
-                      5.Shanghai Artificial Intelligence Laboratory,&nbsp;
-                      6.Shanghai Jiao Tong University,&nbsp;
-                      7.Hong Kong University of Science and Technology,&nbsp;
-                      8.Alibaba Group
+                      <sup>1</sup>The University of Hong Kong,&nbsp;
+                      <sup>2</sup>Carnegie Mellon University,&nbsp;
+                      <sup>3</sup>University of Sydney,&nbsp;
+                      <sup>4</sup>RIKEN AIP,&nbsp;
+                      <sup>5</sup>Shanghai Artificial Intelligence Laboratory,&nbsp;
+                      <sup>6</sup>Shanghai Jiao Tong University,&nbsp;
+                      <sup>7</sup>Hong Kong University of Science and Technology,&nbsp;
+                      <sup>8</sup>Alibaba Group
                     </span>
                     <span class="eql-cntrb">
                       <small><br><sup>†</sup> Corresponding Authors</small>
@@ -322,7 +322,7 @@
     <article class="message is-info">
       <div class="message-header">
         <!-- 放大标题 -->
-        <p class="title is-4">Key Insight</p>
+        <p class="title is-4 has-text-white">Key Insight</p>
       </div>
       <div class="message-body has-text-justified">
         <ul>
