--- a/index.html
+++ b/index.html
@@ -304,18 +304,30 @@
   </div>
 </section>
 
-<!-- Teaser Image-->
-<section class="hero teaser">
-    <div class="container is-max-desktop">
-        <div class="hero-body">
-            <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
-            <h2 class="subtitle has-text-centered">
-                Illustration of MLLMs' internal gap. We examine challenging cases involving implicit physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced by generation branch are identified as incorrect by understanding branch, showing non-unification.
-            </h2>
-        </div>
+<!-- Teaser Image -->
+<section class="section teaser">
+  <div class="container is-max-desktop">
+    <!-- 标题 -->
+    <h2 class="title is-3 has-text-link has-text-centered" style="margin-bottom: 1.5rem;">
+      Internal Gap-based Self-Improvement
+    </h2>
+
+    <!-- 灰色背景卡片 -->
+    <div class="box" style="background-color: #f5f7fa; border-radius: 12px; padding: 2rem;">
+      <div class="has-text-centered">
+        <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
+        <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
+          Illustration of MLLMs' internal gap. We examine challenging cases involving implicit 
+          physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced 
+          by generation branch are identified as incorrect by understanding branch, showing 
+          non-unification.
+        </h2>
+      </div>
     </div>
+  </div>
 </section>
-<!-- End teaser Image -->
+<!-- End Teaser Image -->
+
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
