--- a/index.html
+++ b/index.html
@@ -315,36 +315,35 @@
     <!-- 灰色背景卡片 -->
     <div class="box" style="background-color: #f5f7fa; border-radius: 12px; padding: 2rem;">
       <div class="has-text-centered">
+        <!-- 图片 -->
         <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
+        
+        <!-- 图片说明 -->
         <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
           Illustration of MLLMs' internal gap. We examine challenging cases involving implicit 
           physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced 
           by generation branch are identified as incorrect by understanding branch, showing 
           non-unification.
         </h2>
+
+        <!-- Key Insight 框 -->
+        <article class="message is-info" style="margin-top: 1.5rem;">
+          <div class="message-header">
+            <p class="title is-5 has-text-white">Key Insight</p>
+          </div>
+          <div class="message-body has-text-justified">
+            <ul>
+              <li>Unified MLLMs exhibit an internal gap: understanding typically outperforms generation.</li>
+              <li>This gap mainly stems from weak generation rather than misunderstanding, motivating an internal gap-based self-improvement strategy.</li>
+            </ul>
+          </div>
+        </article>
+
       </div>
     </div>
   </div>
 </section>
 <!-- End Teaser Image -->
-
-
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <article class="message is-info">
-      <div class="message-header">
-        <!-- 放大标题 -->
-        <p class="title is-4 has-text-white">Key Insight</p>
-      </div>
-      <div class="message-body has-text-justified">
-        <ul>
-          <li>Unified MLLMs exhibit an internal gap: understanding typically outperforms generation.</li>
-          <li>The gap mainly stems from weak generation rather than misunderstanding, motivating an internal gap-based self-improvement strategy.</li>
-        </ul>
-      </div>
-    </article>
-  </div>
-</section>
 
 
 
